Worked on #20 – fixed for ProjectList page
I fixed/cleaned up the code for auto-adjusting the visual position of
the navbar and Floating List to they don't bump up when you load the
Project List page.

However, I realized I should really just move that code to the main
component, and do that auto-adjustment under two conditions:
- is there a scrollbar
- is the url slug one that has the floating list (if yes, run that code
  too, otherwise ignore it; this could cause crashes otherwise).

--- a/matthew-ia/src/styles/css/style.css
+++ b/matthew-ia/src/styles/css/style.css
@@ -1200,7 +1200,7 @@ dd {
   position: fixed;
   left: 0;
   bottom: 0;
-  margin: 0 0 3% 10%; }
+  margin: 0 0 5% 10%; }
 
 #bottom-nav ul {
   padding: 0;
